<resources>
    <string name="app_name">LiveMTG</string>
    <string name="bDraftText">DRAFT</string>
    <string name="bSealedText">SEALED</string>
    <string name="bStandardText">STANDARD</string>
    <string name="bModernText">MODERN</string>
    <string name="tPlayerOne">Player One:</string>
    <string name="tPlayerTwo">Player Two:</string>
    <string name="bStartGame">Start Game</string>
    <string name="bDeclareWinner">Declare Winner</string>
    <string name="bPlus">+</string>
    <string name="bPlayerOneWinner">Player One</string>
    <string name="bPlayerTwoWinner">Player Two</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>