<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <Button
        android:id="@+id/bDraft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bDraftText"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/bSealed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bDraft"
        android:text="@string/bSealedText"
        android:visibility="visible" />

    <Button
        android:id="@+id/bStandard"
        app:layout_constraintTop_toBottomOf="@+id/bSealed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bStandardText"
        android:visibility="visible" />

    <Button
        android:id="@+id/bModern"
        app:layout_constraintTop_toBottomOf="@+id/bStandard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bModernText"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tPlayerOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tPlayerOne"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/player1Name"
        app:layout_constraintTop_toBottomOf="@id/tPlayerOne"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tPlayerTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tPlayerTwo"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/player2Name"
        app:layout_constraintTop_toBottomOf="@id/tPlayerTwo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/bStartGame"
        app:layout_constraintTop_toBottomOf="@+id/player2Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bStartGame"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bModern"
        app:layout_constraintVertical_bias="0.926"
        app:srcCompat="@drawable/ic_baseline_skip_next_24" />


</androidx.constraintlayout.widget.ConstraintLayout>